--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "Standard-app": {
+    "standard-app-frontend": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/Standard-app",
+            "outputPath": "dist/standard-app-frontend",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -55,18 +55,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "Standard-app:build"
+            "browserTarget": "standard-app-frontend:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "Standard-app:build:production"
+              "browserTarget": "standard-app-frontend:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "Standard-app:build"
+            "browserTarget": "standard-app-frontend:build"
           }
         },
         "test": {
@@ -100,7 +100,7 @@
         }
       }
     },
-    "Standard-app-e2e": {
+    "standard-app-frontend-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "architect": {
@@ -108,7 +108,7 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "Standard-app:serve"
+            "devServerTarget": "standard-app-frontend:serve"
           }
         },
         "lint": {
@@ -123,5 +123,5 @@
       }
     }
   },
-  "defaultProject": "Standard-app"
+  "defaultProject": "standard-app-frontend"
 }
