--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "@angular/router": "~7.1.4",
     "core-js": "^2.5.4",
     "jquery": "^3.3.1",
+    "ng2-currency-mask": "^5.3.1",
+    "popper.js": "^1.14.7",
     "rxjs": "~6.3.3",
     "save": "^2.3.3",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.10.0",
+    "@angular-devkit/build-angular": "^0.13.0",
     "@angular/cli": "~7.1.4",
     "@angular/compiler-cli": "~7.1.4",
     "@angular/language-service": "~7.1.4",
