--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "core-js": "^2.5.4",
     "jquery": "^3.3.1",
     "ng2-currency-mask": "^5.3.1",
+    "ng2-file-upload": "^1.3.0",
     "popper.js": "^1.14.7",
     "rxjs": "~6.3.3",
     "save": "^2.3.3",
